[package]
name = "rust-voice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.1"
reqwest = {version ="0.11", features = ["multipart", "blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
hound = "3.4.0"
rodio = "0.17.0"
dotenv = "0.15.0"